@@ -4921,7 +4921,6 @@
     "hadoop.kerberos.kinit.command" : "kinit",
     "dfs.datanode.du.reserved" : "0",
     "dfs.namenode.fs-limits.max-blocks-per-file" : "1048576",
-    "dfs.webhdfs.enabled" : "false",
     "file.bytes-per-checksum" : "512",
     "mapreduce.task.profile.reduces" : "0-2",
     "mapreduce.jobtracker.handler.count" : "10",
@@ -10027,7 +10026,6 @@
     "hadoop.kerberos.kinit.command" : "kinit",
     "dfs.datanode.du.reserved" : "0",
     "dfs.namenode.fs-limits.max-blocks-per-file" : "1048576",
-    "dfs.webhdfs.enabled" : "false",
     "file.bytes-per-checksum" : "512",
     "mapreduce.task.profile.reduces" : "0-2",
     "mapreduce.jobtracker.handler.count" : "10",
